--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,13 @@ code {
   background-size: cover;
 }
 
+.pattern-image {
+  background-image: url("assets/about-page/Pattern.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .Extrabold {
   font-family: Extrabold;
 }
