Responsive the Landing section => About page

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.navbar-bg {
+  background-color: #09124273;
+}
+
 .GradientColor {
   background: linear-gradient(
     91deg,
