--- a/src/index.css
+++ b/src/index.css
@@ -169,3 +169,9 @@ code {
 .scroll::-webkit-scrollbar-thumb {
   background-color: #faba20;
 }
+
+.responsive-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 40px;
+}
