--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,10 @@ code {
 .text {
   clip-path: polygon(91% 0, 100% 18%, 100% 100%, 0 100%, 0 1%);
 }
+.textAr {
+  clip-path: polygon(0 0, 9% 0, 0% 18%, 0 100%, 100% 100%, 100% 0);
+}
+
 .text:before {
   border-left: 25px solid transparent;
   border-right: 25px solid transparent;
@@ -280,6 +284,6 @@ code {
 .rtl {
   direction: rtl;
 }
-.ltr{
+.ltr {
   direction: ltr;
 }
